--- a/mkdocs-material/material/partials/footer.html
+++ b/mkdocs-material/material/partials/footer.html
@@ -11,7 +11,7 @@
         powered by
         <a href="http://www.mkdocs.org" title="MkDocs">MkDocs</a>
         and
-        <a href="http://squidfunk.github.io/mkdocs-material/" title="Material for MkDocs">
+        <a href="https://squidfunk.github.io/mkdocs-material/" title="Material for MkDocs">
           Material for MkDocs</a>
       </div>
       {% block social %}
