Set netsec-ethz custom colors

--- a/mkdocs-material/src/assets/stylesheets/_config.scss
+++ b/mkdocs-material/src/assets/stylesheets/_config.scss
@@ -58,8 +58,8 @@ $break-devices: (
 // ----------------------------------------------------------------------------
 
 // Primary and accent colors
-$md-color-primary:                    $clr-indigo-500 !default;
-$md-color-accent:                     $clr-indigo-a200 !default;
+$md-color-primary:                    #3C8DBC !default;
+$md-color-accent:                     $clr-teal-a700 !default;
 
 // Shades of black
 $md-color-black:                      hsla(0, 0%, 0%, 0.87) !default;
