Apply remaining mkdocs-material customisations
Apply further changes that had been made to the previous mkdocs-material
theme version:
  * Set favicon
  * Set font size and margin for title in navigation-panel
  * Remove next/previous navigation links in footer
  * Change primary/accent colors (already done in previous commit)

--- a/mkdocs-material/src/assets/stylesheets/layout/_nav.scss
+++ b/mkdocs-material/src/assets/stylesheets/layout/_nav.scss
@@ -32,7 +32,9 @@
   // List title
   &__title {
     display: block;
+    margin-bottom: 1.6rem;
     padding: 0 1.2rem;
+    font-size: 2.3rem;
     font-weight: 700;
     text-overflow: ellipsis;
     overflow: hidden;
